# Camera

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Makefile  build.gradle  camera.py  config.json  convertModel.py  main.cpp  pins.py  readme.md  starter.py  stream.py  test.py  train.py  update.sh  webCV.py
Matrix/: build.gradle  config.json
Matrix/src/main/java/: Brain.java  test.java
Matrix/src/main/java/camera/: Camera.java  Frame.java  ModelLoader.java
Matrix/src/main/java/it/rmtz/: Brain.java
Matrix/src/main/java/json/: Values.java
Matrix/src/main/java/matrix/: Cell.java  LinkedList.java  Matrix.java  RisingCell.java  SerialConnector.java  Step.java
Matrix/src/main/java/matrix/cartesian/: LinkedList.java  Plane.java  Point.java
Matrix/src/main/java/matrix/cell/: Cell.java  RisingCell.java
Matrix/src/main/java/matrix/communication/: CheckPointSaver.java  SerialConnector.java
Matrix/src/main/java/utils/: CameraTest.java  ConvertModel.java  Preloader.java  SerialTest.java  Utils.java
html/: index.html  js.js
java/: ConvertModel.java  Imshow.java
src/main/java/: Camera.java  ConvertModel.java  test.java
src/main/java/it/rtmz/: ConvertModel.java  Imshow.java  Preloader.java
train/: camera.py  stream.py  train.py
train/html/: index.html  js.js
train/it/: __init__.py
train/it/rmtz/: cameraStream.py  cameraTools.py
train/it/rmtz/train/: train.py
train/it/rtmz/: cameraStream.py  cameraTools.py
train/it/rtmz/train/: train.py  trainMaster.py  trainSlave.py
train/it/rtmz/videoStream/: videoStream.py
(+23 files in other folders)
